kubernetes/apps/home/unifi/endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: Endpoints
metadata:
  name: unifi-service
  namespace: home
subsets:
- addresses:
  - ip: 192.168.1.154
  ports:
  - port: 8443
    name: http
