kubernetes/apps/home/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-service
  namespace: home
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 8081
